# python-usb-protocol

./: .buildinfo  .gitignore  .pre-commit-config.yaml  .pylintrc  MANIFEST.in  README.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  sphinx.yml  wheels.yml
_modules/: index.html
_modules/usb_protocol/: types.html
_sources/: index.rst.txt
_sources/api/: modules.rst.txt  usb_protocol.emitters.construct_interop.rst.txt  usb_protocol.emitters.descriptor.rst.txt  usb_protocol.emitters.descriptors.cdc.rst.txt  usb_protocol.emitters.descriptors.rst.txt  usb_protocol.emitters.descriptors.standard.rst.txt  usb_protocol.emitters.descriptors.uac1.rst.txt  (+17 more)
api/: modules.html  usb_protocol.emitters.construct_interop.html  usb_protocol.emitters.descriptor.html  usb_protocol.emitters.descriptors.cdc.html  usb_protocol.emitters.descriptors.html  usb_protocol.emitters.descriptors.standard.html  usb_protocol.emitters.descriptors.uac1.html  usb_protocol.emitters.descriptors.uac2.html  usb_protocol.emitters.descriptors.uac3.html  usb_protocol.emitters.html  usb_protocol.html  usb_protocol.types.descriptor.html  usb_protocol.types.descriptors.cdc.html  usb_protocol.types.descriptors.html  usb_protocol.types.descriptors.midi1.html  usb_protocol.types.descriptors.midi2.html  usb_protocol.types.descriptors.partial.html  usb_protocol.types.descriptors.partial.standard.html  usb_protocol.types.descriptors.standard.html  usb_protocol.types.descriptors.uac1.html  usb_protocol.types.descriptors.uac2.html  usb_protocol.types.descriptors.uac3.html  usb_protocol.types.html  usb_protocol.types.superspeed.html
examples/: descriptor_builder.py  simple_descriptors.py
tests/: test_emitters_descriptors_std.py  test_emitters_interop.py  test_types_descriptors_std.py  test_types_descriptors_uac2.py
(+37 files in other folders)
