[metadata]
long_description_content_type = text/markdown; charset=UTF-8

[bdist_wheel]
universal = 1

[check-manifest]
ignore =
    .codeclimate.yml
    .gitattributes
    .coveragerc
    .gitignore
    .pep8speaks.yml
    codecov.yml
    conda/**

[flake8]
exclude =
    .git,
    __pycache__,
    examples,
    build,
    dist

max-line-length = 250
max-complexity = 10
addons = file,open,basestring,xrange,unicode,long,cmp
ignore =
    W503,  # line break before binary operator
    F401,  # imported but unused
    F403,  # star import used; unable to detect undefined names
    F405,  # may be undefined, or defined from star imports
    E266,  # too many leading '#' for block comment
    E203,  # whitespace before ':'
    E221,  # multiple spaces before operator
    E222,  # multiple spaces after operator
    E241,  # multiple spaces after ','
    E261,  # at least two spaces before inline comment
    E271,  # multiple spaces after keyword
    E272,  # multiple spaces before keyword
    E303,  # too many blank lines
    E302,  # expected 2 blank lines, found 1
    E305,  # expected 2 blank lines after class or function definition
    E731,  # do not assign a lambda expression, use a def

[nosetests]
verbosity = 3
with-xcoverage = 1
with-xunit = 1
cover-package = usb_protocol
cover-xml = 1
cover-erase = 1
cover-branches = 1
cover-inclusive = 1
all-modules = 1
traverse-namespace = 1
